# reversi

./: .gitignore  Cargo.toml  Readme.md  tarpaulin-report.html
reversi_client/: Cargo.toml  README.md  index.html
reversi_client/src/: lib.rs  main.rs
reversi_core/: Cargo.toml
reversi_core/src/: lib.rs
reversi_cui/: Cargo.toml
reversi_cui/src/: main.rs
reversi_gui/: Cargo.toml
reversi_gui/src/: main.rs
reversi_message/: Cargo.toml
reversi_message/src/: lib.rs
reversi_server/: Cargo.toml
reversi_server/src/: main.rs
reversi_wasm_common/: Cargo.toml
reversi_wasm_common/src/: lib.rs
reversi_wasm_common/tests/: wasm.rs
src/: main.rs
testdata/: initview
