[package]
name = "reversi_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reversi_core = {path = "../reversi_core"}
wasm-bindgen = "0.2.70"
js-sys = "0.3.47"
tungstenite = {version="0.17.3"}
serde_json = "1.0.85"
url = "2.1.0"
http = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.59"
features = [
  'console',
  'Window',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Node',
  'EventTarget',
  'KeyboardEvent',
  'DomRect',
  'MouseEvent',
  'WebSocket',
  'MessageEvent',
]
